--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -5,5 +5,6 @@
     <label>name: </label>
     <input [(ngModel)]="hero.name" placeholder="name">
   </div>
-  <a (click)="goBack()">Back!</a>
+  <button (click)="goBack()">Back!</button>
+  <button (click)="save()">Save!</button>
 </div>
